--- a/js/index.html
+++ b/js/index.html
@@ -2,7 +2,7 @@
     <title>Demo for clooey.js</title>
     <head>
         <script src="https://mozilla.github.io/nunjucks/files/nunjucks.min.js"></script>
-        <script src="https://alvinwan.com/clooey/demo/clooey.js"></script>
+        <script src="https://alvinwan.com/clooey/js/clooey.js"></script>
     </head>
     <body>
         <div id="clooey"></div>
